--- a/about.html
+++ b/about.html
@@ -5,17 +5,17 @@
   </head>
   <body>
 
-<a href="index.html"><div style="position: absolute; top: 10px; left: 300px"><p1>Home</p1></div></a>
-<a href="about.html"><div style="position: absolute; top: 10px; left: 500px"><p1>About</p1></div></a>
-<a href="more.html"><div style="position: absolute; top: 10px; left: 700px"><p1>More</p1></div></a>
-<a href="contact.html"><div style="position: absolute; top: 10px; left: 900px"><p1>Contact</p1></div></a>
+<a href="index.html"><div style="position: absolute; top: 10px; left: 400px"><p1>Home</p1></div></a>
+<a href="about.html"><div style="position: absolute; top: 10px; left: 600px"><p1>About</p1></div></a>
+<a href="more.html"><div style="position: absolute; top: 10px; left: 800px"><p1>More</p1></div></a>
+<a href="contact.html"><div style="position: absolute; top: 10px; left: 1000px"><p1>Contact</p1></div></a>
 
 <p align="center" style="color:#ffffff;  font-size:50px";>Coffee in Klaipeda</p>
 <h1 align="center" style="color:#ffffff;  font-size:30px";>The very first cup of coffee was served back in 1683, ever since not a</h1>
 <h1 align="center" style="color:#ffffff;  font-size:30px";>single soul could resist this flavorful drink that we are so used to drink </h1>
-<h1 align="center" style="color:#ffffff;  font-size:30px";>at home, in the cafe, or on the go. Here are Top 5 Coffee Shops that will </h1>
+<h1 align="center" style="color:#ffffff;  font-size:30px";>at home, in the cafe, or on the go. Here are <a href="more.html" style="color:white";>Top 5 Coffee Shops</a> that will </h1>
 <h1 align="center" style="color:#ffffff;  font-size:30px";>leave you wanting more.</h1>
-<a href="more.html"><div style="position: absolute; top: 470px; left: 750px"><img src="++.jpg" width="250" height="10"  /></div></a>
+
  
  </body>
 </html>
