--- a/more.html
+++ b/more.html
@@ -4,15 +4,15 @@
     <link rel="stylesheet" type="text/css" href="stylemore.css">
   </head>
   <body>
-<a href="index.html"><div style="position: absolute; top: 10px; left: 300px"><p1>Home</p1></div></a>
-<a href="about.html"><div style="position: absolute; top: 10px; left: 500px"><p1>About</p1></div></a>
-<a href="more.html"><div style="position: absolute; top: 10px; left: 700px"><p1>More</p1></div></a>
-<a href="contact.html"><div style="position: absolute; top: 10px; left: 900px"><p1>Contact</p1></div></a>
+<a href="index.html"><div style="position: absolute; top: 10px; left: 400px"><p1>Home</p1></div></a>
+<a href="about.html"><div style="position: absolute; top: 10px; left: 600px"><p1>About</p1></div></a>
+<a href="more.html"><div style="position: absolute; top: 10px; left: 800px"><p1>More</p1></div></a>
+<a href="contact.html"><div style="position: absolute; top: 10px; left: 1000px"><p1>Contact</p1></div></a>
 
 
 
 
-<div style="position: absolute; top: 100px; left: 400px"><p2>Top 5 Coffee Shops in Klaipeda</p2></div>
+<div style="position: absolute; top: 100px; left: 500px"><p2>Top 5 Coffee Shops in Klaipeda</p2></div>
 
 <div style="position: absolute; top: 180px; left: 50px"><p2>Kavos Architektai</p2></div>
 <div style="position: absolute; top: 210px; left: 400px"><p3> Kavos Architektai is a cozy coffee</p3></div>
@@ -53,8 +53,7 @@
 <div style="position: absolute; top: 1005px; left: 400px"><p3> -Vegetarian friendly </p3></div>
 <div style="position: absolute; top: 865px; left: 50px"><img src="4.jpg" width="300" height="160" /></div>
 
-<div style="position: absolute; top: 1035px; left: 50
-px"><p2>Chocolate House</p2></div>
+<div style="position: absolute; top: 1035px; left: 60px"><p2>Chocolate House</p2></div>
 <div style="position: absolute; top: 1070px; left: 400px"><p3>Chocolate house is relatively new</p3></div>
 <div style="position: absolute; top: 1095px; left: 400px"><p3>but already loved by many place. </p3></div>
 <div style="position: absolute; top: 1120px; left: 400px"><p3>This chocolate heaven is a perfect </p3></div>
