--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
 <p align="center" style="color:#ffffff;  font-size:50px"; >Top 5 Coffee Shops in Klaipeda</p>
 
-<a href="about.html"><div style="position: absolute; top: 300px; left: 700px"><img src="start.png" /></div></a>
+<a href="about.html"><div style="position: absolute; top: 500px; left: 700px"><p6>Start</p6></div></a> 
   </body>
 </html>
